objects/ServiceTerritory.object
<CustomObject>
    <fields>
        <fullName>Beta_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beta Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Hide_Emergency_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the map will be shown on the emergency wizard</description>
        <label>Hide Emergency Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Internal_SLR_Geolocation__c</fullName>
        <label>Internal SLR HomeAddress Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL__NumberOfServicesToDripFeed__c</fullName>
        <label>Number Of Services To Drip Feed</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__O2_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if enhanced scheduling and optimization engine is used</description>
        <label>Use enhanced scheduling and optimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Cluster_Min_Size__c</fullName>
        <label>Service Cluster Min Size (Closed Pilot)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Cluster_Proximity__c</fullName>
        <label>Service Cluster Proximity (Closed Pilot)</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__System_Jobs__c</fullName>
        <label>System Jobs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BATCH_ServicesInJeopardy</fullName>
                </value>
                <value>
                    <fullName>BATCH_ServicesDispatched</fullName>
                </value>
                <value>
                    <fullName>ChatterNotification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__TerritoryLevel__c</fullName>
        <label>Territory Level</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generate_TimeSheets__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine is a timesheet is generated for the members of the territory</description>
        <inlineHelpText>Used to determine is a timesheet is generated for the members of the territory</inlineHelpText>
        <label>Generate TimeSheets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Beta__c</fullName>
        <formula>OR ( BEGINS( Name, &apos;GN&apos; ),
BEGINS( Name, &apos;OV&apos; ) )</formula>
        <label>Is Beta</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_Inactive_Service_Territories</fullName>
        <columns>Name</columns>
        <columns>IsActive</columns>
        <columns>OperatingHours</columns>
        <columns>ParentTerritory</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LastModifiedBy</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Inactive Service Territories</label>
    </listViews>
    <listViews>
        <fullName>All_ServiceTerritories</fullName>
        <columns>Name</columns>
        <columns>IsActive</columns>
        <columns>OperatingHours</columns>
        <columns>ParentTerritory</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LastModifiedBy</columns>
        <columns>FSL__TerritoryLevel__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Active Service Territories</label>
    </listViews>
    <listViews>
        <fullName>All_Service_Territories</fullName>
        <columns>Name</columns>
        <columns>IsActive</columns>
        <columns>OperatingHours</columns>
        <columns>ParentTerritory</columns>
        <columns>TopLevelTerritory</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LastModifiedBy</columns>
        <columns>CREATED_DATE</columns>
        <columns>CreatedBy</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Territories</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_All_Service_Territories</fullName>
        <columns>Name</columns>
        <columns>IsActive</columns>
        <columns>OperatingHours</columns>
        <columns>ParentTerritory</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LastModifiedBy</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ParentTerritory</field>
            <operation>equals</operation>
        </filters>
        <label>All Parent Service Territories</label>
    </listViews>
    <listViews>
        <fullName>My_ServiceTerritories</fullName>
        <filterScope>Mine</filterScope>
        <label>My Service Territories</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>